syntax = "proto3";
package imgPlugin;

option go_package = "https://github.com/img-cdn/imgPlugin/proto";

// go:plugin type=plugin version=1
service Actuator {
  rpc Modify(PluginRequest) returns (PluginReply) {}
}

message PluginRequest {
  string src_path = 1;
  string dest_path = 2;
  map<string,string> parameters = 3 ;
  int32 quality = 4;
}


message PluginReply {
  string message = 1;
}

